syntax = "proto3";
package server;

option csharp_namespace = "HideAndSeek.Proto";

message Vector
{
    float x = 1;
    float y = 2;
    float z = 3;
}

message PlayerState
{
    bytes user_id = 1;
    string name = 2;
    Vector position = 3;
    float rotation = 4;
    int32 team = 5;
    int32 object_id = 6;
    int32 life = 7;
}

message PlayerList
{
    repeated PlayerState states = 1;
}

message PlayerMove
{
    Vector position = 2;
    float rotation = 3;
}
